<?xml version="1.0"?>
<package format="2">
  <name>sbus_serial</name>
  <version>1.0.0</version>
  <description>The sbus_serial package</description>

	<maintainer email="jens@jwrobotics.com">Jens Willy Johannsen</maintainer>
	<license>MIT</license>
	<author email="jens@jwrobotics.com">Jens Willy Johannsen</author>


	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
</package>
