<?xml version="1.0"?>
<package format="3">
	<name>sbus_serial</name>
	<version>2.0.0</version>
	<description>The sbus_serial package for ROS 2</description>
	<maintainer email="jens@jwrobotics.com">Jens Willy Johannsen</maintainer>
	<license>MIT</license>
	<author email="jens@jwrobotics.com">Jens Willy Johannsen</author>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>rosidl_default_generators</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>

	<exec_depend>ros2launch</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>

	<!-- Old, unconverted stuff below 
	<build_depend>roscpp</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
-->
</package>